--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 ---
 layout: home
-title: 93 - the singularity is here.
+title: the singularity is here.
 subtitle: This is where I will rant about Philosphy, Monero, hacking, CTF's, programming and memes.
 ---
